# humecodec

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
scripts/: bump-version.sh  bundle-avdevice-macos.sh  fetch-ffmpeg.py  ffmpeg.json  repair-wheel.sh
src/humecodec/: __init__.py  _extension.py  decoder.py  encoder.py
src/humecodec/csrc/: avdevice_loader.h  cuda_utils.cpp  cuda_utils.h  error_utils.h  ffmpeg.cpp  ffmpeg.h  filter_graph.cpp  filter_graph.h  hw_context.cpp  hw_context.h  managed_buffer.cpp  managed_buffer.h  pybind.cpp  tensor_view.h
src/humecodec/csrc/stream_reader/: conversion.cpp  conversion.h  packet_buffer.cpp  packet_buffer.h  post_process.cpp  post_process.h  stream_processor.cpp  stream_processor.h  stream_reader.cpp  stream_reader.h  typedefs.h
src/humecodec/csrc/stream_reader/buffer/: chunked_buffer.cpp  chunked_buffer.h  unchunked_buffer.cpp  unchunked_buffer.h
src/humecodec/csrc/stream_writer/: encode_process.cpp  encode_process.h  encoder.cpp  encoder.h  packet_writer.cpp  packet_writer.h  stream_writer.cpp  stream_writer.h  tensor_converter.cpp  tensor_converter.h  types.h
src/torchffmpeg/: __init__.py  _extension.py  decoder.py  encoder.py
src/torchffmpeg/csrc/: compat.h  cuda_utils.cpp  cuda_utils.h  dlpack.h  error_utils.h  ffmpeg.cpp  ffmpeg.h  filter_graph.cpp  filter_graph.h  hw_context.cpp  hw_context.h  managed_buffer.cpp  managed_buffer.h  pybind.cpp  tensor_view.h
src/torchffmpeg/csrc/stream_reader/: conversion.cpp  conversion.h  packet_buffer.cpp  packet_buffer.h  post_process.cpp  post_process.h  stream_processor.cpp  stream_processor.h  stream_reader.cpp  stream_reader.h  typedefs.h
src/torchffmpeg/csrc/stream_reader/buffer/: chunked_buffer.cpp  chunked_buffer.h  unchunked_buffer.cpp  unchunked_buffer.h
src/torchffmpeg/csrc/stream_writer/: encode_process.cpp  encode_process.h  encoder.cpp  encoder.h  packet_writer.cpp  packet_writer.h  stream_writer.cpp  stream_writer.h  tensor_converter.cpp  tensor_converter.h  types.h
tests/: test_audio.py
