[build-system]
requires = ["setuptools>=64", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "torchffmpeg"
version = "0.1.0"
description = "FFmpeg integration for PyTorch with bundled libraries"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "torchffmpeg contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering",
]
keywords = ["audio", "video", "ffmpeg", "pytorch", "machine learning"]
dependencies = ["torch>=2.0"]

[project.urls]
Homepage = "https://github.com/your-org/torchffmpeg"
Documentation = "https://github.com/your-org/torchffmpeg#readme"
Repository = "https://github.com/your-org/torchffmpeg"
Issues = "https://github.com/your-org/torchffmpeg/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["torchffmpeg", "torchffmpeg.*"]

# ---------------------------------------------------------------------------
# cibuildwheel configuration
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
# Build for Python 3.9+
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"

# Skip musllinux and PyPy
skip = "*-musllinux_* pp*"

# Test command
test-command = "python -c \"import torchffmpeg; print(torchffmpeg.get_versions())\""
test-requires = ["pytest", "numpy"]

[tool.cibuildwheel.linux]
# Download FFmpeg before building
before-build = "pip install pybind11 && python scripts/fetch-ffmpeg.py /tmp/ffmpeg"

# Environment for finding FFmpeg
environment = { PKG_CONFIG_PATH = "/tmp/ffmpeg/lib/pkgconfig", LD_LIBRARY_PATH = "/tmp/ffmpeg/lib:$LD_LIBRARY_PATH", TORCHFFMPEG_FFMPEG_ROOT = "/tmp/ffmpeg" }

# Repair wheel to bundle FFmpeg libraries (exclude PyTorch/CUDA - user provides these)
# Uses custom script that also patches RPATHs in bundled libraries
repair-wheel-command = "bash scripts/repair-wheel.sh {wheel} {dest_dir}"

[tool.cibuildwheel.macos]
before-build = "pip install pybind11 && python scripts/fetch-ffmpeg.py /tmp/ffmpeg"
environment = { PKG_CONFIG_PATH = "/tmp/ffmpeg/lib/pkgconfig", DYLD_LIBRARY_PATH = "/tmp/ffmpeg/lib:$DYLD_LIBRARY_PATH", TORCHFFMPEG_FFMPEG_ROOT = "/tmp/ffmpeg", LDFLAGS = "-headerpad_max_install_names" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
before-build = "pip install pybind11 && python scripts\\fetch-ffmpeg.py C:\\ffmpeg"
environment = { INCLUDE = "C:\\ffmpeg\\include", LIB = "C:\\ffmpeg\\lib", TORCHFFMPEG_FFMPEG_ROOT = "C:\\ffmpeg" }
repair-wheel-command = "delvewheel repair --add-path C:\\ffmpeg\\bin -w {dest_dir} {wheel}"
